Ignore build data with docker-compose
Signed-off-by: Alek Ratzloff <alekratz@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     env_file: docker.env
     volumes:
       - ".:/app"
+      # ignore build data
+      - "/app/_build"
     working_dir: "/app"
     restart: always
