Add awareness of mix deps to docker stuff
* Dockerfile now runs mix deps.get before running mix run
* Ignore /app/deps in docker-compose.yml so filesystems are not shared

Signed-off-by: Alek Ratzloff <alekratz@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - ".:/app"
       # ignore build data
       - "/app/_build"
+      - "/app/deps"
     working_dir: "/app"
     restart: always
