Change how docker-compose maps volumes
Only a handful of locations are shared with the docker-compose file,
instead of the entire directory, to prevent build files from being
overwritten by root.

Signed-off-by: Alek Ratzloff <alekratz@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     build: .
     env_file: docker.env
     volumes:
-      - ".:/app"
-      # ignore build data
-      - "/app/_build"
-      - "/app/deps"
+      - "./mix.exs:/app/mix.exs"
+      - "./lib:/app/lib"
+      - "./config:/app/config"
+      - "./data:/app/data"
+      - "./omnibot.exs:/app/omnibot.exs"
     working_dir: "/app"
     restart: always
